# 2022LOFI

./: README.md  cam  cam1  cam2  camera.py  colmap0.py  control.py  gen_3d_mesh.ipynb  led.py  local  lofi.ui  lofi0  lofi00  lofi_colmap.py  lofi_program.py  make_end.py  make_start.py  network  network_control  pose.csv  program.py  publisher_member_function.cpp  remote  ros1  rosyolo  sfm.py  subscriber_member_function.cpp
Point_Cloud/: dense.ply  sparse.ply
ROS_2_ANDROID/: connect
ROS_2_ANDROID/install/: local_setup.sh  setup.sh
ROS_2_ANDROID/log/: latest_build
ROS_2_ANDROID/src/: publisher_member_function.cpp
catkin_ws/: cam0
catkin_ws/2022competition/: CMakeLists.txt  package.xml
catkin_ws/devel/: .catkin  local_setup.sh  setup.bash  setup.sh
catkin_ws/src/opencv/: CMakeLists.txt
catkin_ws/src/opencv/src/: sub.cpp
custom_msg/: CMakeLists.txt
custom_msg/install/: local_setup.sh  setup.sh
custom_msg/log/: latest_build
custom_msg/msg/: Ros2Yolo.msg
dense/stereo/: fusion.cfg  patch-match.cfg
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Project/: .rosinstall  _setup_util.py  setup.sh
lofi/: package.xml  setup.cfg  setup.py
lofi/lofi/: colmap.py  lofi0.py
log/: latest_build
myplaces/app/: build.gradle
output/: bpa_mesh.ply  lod_100.ply  lod_1000.ply  lod_10000.ply  lod_100000.ply  lod_300.ply  lod_50000.ply  lod_800.ply  lod_8000.ply
result/: fused0.ply  fused0.ply.vis  meshed-poisson.ply
ros2yolo/ros2yolo/: sub.cpp
sparse/0/: project.ini
(+56 files in other folders)
